# FNVR_v3

./: .gitignore  CLAUDE.md  FNVR.ini  FNVRGlobals.esp  FNVR_ADVANCEMENT_PATHS.md  FNVR_IMPROVEMENT_PLAN.md  FNVR_PROFESSIONAL_REVIEW.md  FNVR_VORPX_INTEGRATION_PLAN.md  FNVR_calibrated_tracker.py  FNVR_simple_tracker.py  README.md  build.bat  esp_formids.txt  fnvr_calibration.json  fnvr_config.ini  fnvr_debug.txt  fnvr_pose_pipe.py  install_fnvr.bat  legacy_FNVR_Tracker.py  run_all_trackers.bat  run_calibrated_tracker.bat  script.txt  secondscript.txt  setup_venv.bat  start_fnvr_tracker.bat  v2_calibrated_tracker.py  v2_run_calibrated_tracker.bat
.claude/: settings.local.json
.cursor/rules/: project-overview.mdc
FNVRGlobals/: VRDataPacketV2.h
NVCS Installer-68776-13-1675087064/01 CBBE/Meshes/Characters/_1stPerson/: Skeleton.nif
NVCS Installer-68776-13-1675087064/01 CBBE/Meshes/Characters/_Male/: Skeleton.nif
NVCS Installer-68776-13-1675087064/01 Default/Meshes/Characters/_1stPerson/: Skeleton.nif
NVCS Installer-68776-13-1675087064/01 Default/Meshes/Characters/_Male/: Skeleton.nif
NVCS Installer-68776-13-1675087064/01 Vanilla Weights/Meshes/Characters/_1stPerson/: Skeleton.nif
NVCS Installer-68776-13-1675087064/01 Vanilla Weights/Meshes/Characters/_Male/: Skeleton.nif
NVCS Installer-68776-13-1675087064/FOMOD/: Meta.iNi  ModuleConfig.XML  info.XML
NewVersion_Problematic/: FNVR_hybrid_tracker.py  FNVR_master_tracker.py  FNVR_master_tracker_fixed.py  Skeleton.nif  fnvr_gui.py  fnvr_settings.json  run_gui.bat
fnvr_plugin/: CMakeLists.txt  FNVR_porting_notes.md  FRIKSkeleton.h  FirstPersonBodyFix.cpp  FirstPersonBodyFix.h  Globals.cpp  Globals.h  NVCSSkeleton.cpp  NVCSSkeleton.h  PipeClient.cpp  PipeClient.h  PluginMain.cpp  PluginMain_backup.cpp  VRDataPacket.h  VRSystem.cpp  VRSystem.h  VorpXCompatibility.h  build.bat  fnvr_plugin.def  fnvr_plugin_pch.h
fnvr_plugin/SDK/JohnnyGuitarNVSE-5.00/nvse/nvse/: CommandTable.h  GameAPI.cpp  GameAPI.h  GameBSExtraData.cpp  GameBSExtraData.h  GameData.cpp  GameData.h  GameEffects.h  GameExtraData.cpp  GameExtraData.h  GameForms.h  GameOSDepend.cpp  GameOSDepend.h  GameObjects.cpp  GameObjects.h  GameProcess.h  GameRTTI.cpp  GameRTTI.h  GameScript.cpp  GameScript.h  GameSettings.cpp  GameSettings.h  GameTasks.cpp  GameTasks.h  GameTiles.cpp  GameTiles.h  GameTypes.cpp  GameTypes.h  GameUI.cpp  GameUI.h  NiTypes.h  PluginAPI.h  ScriptUtils.h  Utilities.cpp
fnvr_plugin/SDK/NVSE-6.3.10/nvse/: nvse.sln
fnvr_plugin/SDK/NVSE-6.3.10/nvse/nvse/: EventManager.h  GameAPI.h  LambdaManager.cpp  ScriptTokens.h  nvse.vcxproj
fnvr_plugin/SDK/NVSE-SDK/nvse/nvse/: ScriptAnalyzer.cpp  ScriptAnalyzer.h  StringVar.h
fnvr_plugin/SDK/NVSE-SDK/nvse_plugin_example/: nvse_plugin_example.vcxproj
